--- a/src/main/resources/jaas.config
+++ b/src/main/resources/jaas.config
@@ -1,6 +1,4 @@
 Example {
-   biz.letsweb.research.jaaslogin.RdbmsLoginModule required
-   driver="org.gjt.mm.mysql.Driver"
-   url="jdbc:mysql://localhost/jaasdb?user=root"
-   debug="true";
-   };
+   RdbmsLoginModule required debug="true" url="jdbc:mysql://localhost/jaasdb?user=root&password=pass" driver="org.gjt.mm.mysql.Driver";
+};
+
