improve project setup

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=${log.level}, dev
+log4j.rootLogger=debug, dev
 logFileName=update.log
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
@@ -11,7 +11,8 @@ log4j.appender.file.layout.ConversionPattern=%-5p [%t] %r %c{1} >> %m%n
 log4j.appender.dev=org.apache.log4j.ConsoleAppender
 log4j.appender.dev.Target=System.out
 log4j.appender.dev.layout=org.apache.log4j.PatternLayout
-log4j.appender.dev.layout.ConversionPattern=%-5p [%t] %r %c{1} >> %m%n
+#log4j.appender.dev.layout.ConversionPattern=%-5p [%t] %r %c{1} >> %m%n
+log4j.appender.dev.layout.ConversionPattern=%-5r %t %-5p %c{1}.%M,%L - %m%n
 
 #log4j.category. com.tomasz.design.framuga=TRACE
 
