improve project setup

--- a/jaas.config
+++ b/jaas.config
@@ -1,6 +1,6 @@
 Example {
-    com.tomasz.design.framuga.jaas.RdbmsLoginModule 
-    required debug="true" 
+    com.tomasz.design.framuga.jaas.RdbmsLoginModule required 
+    debug="true" 
     url="jdbc:derby://localhost:1527/lksflr" 
     driver="org.apache.derby.jdbc.ClientDriver";
 };
